Fixed image alignment

--- a/static/style.css
+++ b/static/style.css
@@ -62,6 +62,20 @@ a:hover {
   text-decoration: none;
 }
 .icon {
-  max-width: 128px;
-  max-height: 128px;
+  vertical-align: middle;
+  max-width: 85%;
+  max-height: 85%;
+}
+
+.myhelper {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
+.post_head {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
